--- a/ansible/docker.yml
+++ b/ansible/docker.yml
@@ -4,6 +4,9 @@
 
   tasks:
 
+  - name: Update Homebrew
+    homebrew: update_homebrew=yes
+
   - name: Tap Caskroom
     homebrew_tap: tap=caskroom/cask
 
