--- a/compose/kubernetes-dev.yml
+++ b/compose/kubernetes-dev.yml
@@ -1,9 +1,8 @@
 etcd:
-  image: gcr.io/google_containers/etcd:2.2.1
+  image: quay.io/coreos/etcd:v2.2.2
   net: host
   pid: host
-  command: [ '/usr/local/bin/etcd',
-             '--addr=127.0.0.1:4001',
+  command: [ '--addr=127.0.0.1:4001',
              '--bind-addr=0.0.0.0:4001',
              '--data-dir=/var/etcd/data']
 
