--- a/compose/kubernetes-dev.yml
+++ b/compose/kubernetes-dev.yml
@@ -1,13 +1,12 @@
 etcd:
   image: quay.io/coreos/etcd:v2.2.2
   net: host
-  pid: host
   command: [ '--addr=127.0.0.1:4001',
              '--bind-addr=0.0.0.0:4001',
              '--data-dir=/var/etcd/data']
 
 kube-master:
-  image: gcr.io/google_containers/hyperkube:v1.1.2
+  image: gcr.io/google_containers/hyperkube:v1.1.3
   privileged: true
   net: host
   pid: host
@@ -18,24 +17,25 @@ kube-master:
     - /var/lib/docker/:/var/lib/docker:ro
     - /var/lib/kubelet/:/var/lib/kubelet:rw
     - /var/run:/var/run:rw
-  command: ['/hyperkube',
+  command: ['nsenter',
+            '--target=1',
+            '--mount',
+            '--wd=.',
+            '--',
+            './hyperkube',
             'kubelet',
-            '--containerized',
+            '--hostname-override=127.0.0.1',
             '--address=0.0.0.0',
-            '--allow-privileged=true',
-            '--hostname-override=localhost',
-            '--maximum-dead-containers=10',
             '--api-servers=http://localhost:8080',
-            '--config=/etc/kubernetes/manifests',
-            '--v=2']
+            '--config=etc/kubernetes/manifests',
+            '--maximum-dead-containers=10']
 
 kube-proxy:
-  image: gcr.io/google_containers/hyperkube:v1.1.2
+  image: gcr.io/google_containers/hyperkube:v1.1.3
   privileged: true
   net: host
   pid: host
   command: ['/hyperkube',
             'proxy',
-            '--master=http://localhost:8080',
-            '--bind-address=0.0.0.0',
+            '--master=http://127.0.0.1:8080',
             '--v=2']
