--- a/compose/kubernetes-dev.yml
+++ b/compose/kubernetes-dev.yml
@@ -24,10 +24,13 @@ kube-master:
             '--',
             './hyperkube',
             'kubelet',
+            '--containerized',
             '--hostname-override=127.0.0.1',
             '--address=0.0.0.0',
             '--api-servers=http://localhost:8080',
-            '--config=etc/kubernetes/manifests',
+            '--config=etc/kubernetes/manifests-multi',
+            '--cluster-dns=10.0.0.10',
+            '--cluster-domain=internal',
             '--maximum-dead-containers=10']
 
 kube-proxy:
