--- a/k8s/ui.yaml
+++ b/k8s/ui.yaml
@@ -1,22 +1,37 @@
 apiVersion: v1
-kind: ReplicationController
+kind: Service
 metadata:
-  name: kube-ui-v4
+  name: kube-ui
   namespace: kube-system
   labels:
     k8s-app: kube-ui
-    version: v4
+    kubernetes.io/cluster-service: "true"
+    kubernetes.io/name: "KubeUI"
+spec:
+  selector:
+    k8s-app: kube-ui
+  ports:
+  - port: 80
+    targetPort: 8080
+
+---
+
+apiVersion: v1
+kind: ReplicationController
+metadata:
+  name: kube-ui
+  namespace: kube-system
+  labels:
+    k8s-app: kube-ui
     kubernetes.io/cluster-service: "true"
 spec:
   replicas: 1
   selector:
     k8s-app: kube-ui
-    version: v4
   template:
     metadata:
       labels:
         k8s-app: kube-ui
-        version: v4
         kubernetes.io/cluster-service: "true"
     spec:
       containers:
