--- a/compose/kubernetes-dev.yml
+++ b/compose/kubernetes-dev.yml
@@ -1,62 +1,24 @@
-etcd:
-  image: quay.io/coreos/etcd:v2.2.5
-  net: host
-  command: [ '--addr=127.0.0.1:4001',
-             '--bind-addr=0.0.0.0:4001',
-             '--data-dir=/var/etcd/data']
-
 kube-master:
-  image: gcr.io/google_containers/hyperkube:v1.1.8
-  privileged: true
+  image: gcr.io/google_containers/hyperkube:v1.2.4
   net: host
   pid: host
+  privileged: true
   volumes:
     - /:/rootfs:ro
     - /sys:/sys:ro
     - /dev:/dev
-    - /var/lib/docker/:/var/lib/docker:ro
+    - /var/lib/docker/:/var/lib/docker:rw
     - /var/lib/kubelet/:/var/lib/kubelet:rw
     - /var/run:/var/run:rw
-  command: ['nsenter',
-            '--target=1',
-            '--mount',
-            '--wd=.',
-            '--',
-            './hyperkube',
+  command: ['/hyperkube',
             'kubelet',
+            '--containerized',
             '--hostname-override=127.0.0.1',
             '--address=0.0.0.0',
             '--api-servers=http://localhost:8080',
-            '--config=etc/kubernetes/manifests-multi',
+            '--config=/etc/kubernetes/manifests',
             '--cluster-dns=10.0.0.10',
             '--cluster-domain=internal',
-            '--maximum-dead-containers=10']
-
-kube-proxy:
-  image: gcr.io/google_containers/hyperkube:v1.1.8
-  privileged: true
-  net: host
-  pid: host
-  command: ['/hyperkube',
-            'proxy',
-            '--master=http://127.0.0.1:8080',
+            '--maximum-dead-containers=10',
+            '--allow-privileged=true',
             '--v=2']
-
-kube2sky:
-  image: gcr.io/google_containers/kube2sky:1.14
-  privileged: true
-  net: host
-  pid: host
-  command: ['--domain=internal',
-            '--kube_master_url=http://127.0.0.1:8080']
-
-skydns:
-  image: gcr.io/google_containers/skydns:2015-10-13-8c72f8c
-  privileged: true
-  net: host
-  pid: host
-  command: [ '-machines=http://127.0.0.1:4001',
-             '-addr=0.0.0.0:53',
-             '-ns-rotate=false',
-             '-domain=internal.',
-             '-verbose']
