--- a/k8s/ui.yaml
+++ b/k8s/ui.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kube-ui
-  namespace: kube-system
+  namespace: default
   labels:
     k8s-app: kube-ui
     kubernetes.io/cluster-service: "true"
@@ -20,7 +20,7 @@ apiVersion: v1
 kind: ReplicationController
 metadata:
   name: kube-ui
-  namespace: kube-system
+  namespace: default
   labels:
     k8s-app: kube-ui
     kubernetes.io/cluster-service: "true"
