--- a/ansible/docker.yml
+++ b/ansible/docker.yml
@@ -5,6 +5,7 @@
 
       uid:
       gid:
+      mnet:
 
       docker_brew: &docker_brew
         - docker-machine
@@ -45,6 +46,21 @@
   - stat: path=/usr/local/bin/docker
     register: sym
 
+  - name: Add NFS share to /etc/exports
+    blockinfile:
+      dest: /etc/exports
+      create: yes
+      marker: "## {mark} Boot2Docker Developer Environment ##"
+      content: '/Users -alldirs -network {{ mnet }} -mask 255.255.0.0 -mapall={{ uid }}:{{ gid }}'
+    become: yes
+    become_method: sudo
+    register: exports
+
+  - name: Restart nfsd
+    command: sudo nfsd restart
+    become: yes
+    become_method: sudo
+    when: exports.changed
 
   - name: Install Docker tools
     when: sym.stat.islnk is not defined or sym.stat.islnk
