--- a/compose/kubernetes-dev.yml
+++ b/compose/kubernetes-dev.yml
@@ -1,3 +1,11 @@
+etcd:
+  image: gcr.io/google_containers/etcd:2.2.1
+  net: host
+  command: [ '/usr/local/bin/etcd',
+             '--addr=127.0.0.1:4001',
+             '--bind-addr=0.0.0.0:4001',
+             '--data-dir=/var/etcd/data']
+
 kube-master:
   image: gcr.io/google_containers/hyperkube:v1.2.4
   net: host
@@ -16,7 +24,7 @@ kube-master:
             '--hostname-override=127.0.0.1',
             '--address=0.0.0.0',
             '--api-servers=http://localhost:8080',
-            '--config=/etc/kubernetes/manifests',
+            '--config=/etc/kubernetes/manifests-multi',
             '--cluster-dns=10.0.0.10',
             '--cluster-domain=internal',
             '--maximum-dead-containers=10',
