--- a/ansible/docker.yml
+++ b/ansible/docker.yml
@@ -3,17 +3,17 @@
   connection:   local
   vars:
 
-      uid:
-      gid:
-
       docker_brew: &docker_brew
+        - docker
         - docker-machine
         - docker-compose
-        - docker
 
       third_party_brew: &third_party_brew
         - amazon-ecs-cli
         - kubernetes-cli
+
+      third_party_cask_brew: &third_party_cask_brew
+        - minikube
 
   tasks:
 
@@ -42,7 +42,6 @@
   - stat: path=/usr/local/bin/docker
     register: sym
 
-
   - name: Install Docker tools
     when: sym.stat.islnk is not defined or sym.stat.islnk
     homebrew: >
@@ -50,8 +49,14 @@
       state=latest
     with_items: *docker_brew
 
-  - name: Install Docker third-party tools
+  - name: Install third-party tools
     homebrew: >
       name={{item}}
       state=latest
     with_items: *third_party_brew
+
+  - name: Install third-party tools from cask (May ask for sudo passwd)
+    homebrew_cask: >
+      name={{item}}
+      state=installed
+    with_items: *third_party_cask_brew
